[package]
name = "imprint"
version = "0.1.0"
authors = ["Phil Ruffwind <rf@rufflewind.com>"]
description = "Type-level manipulation of values."
documentation = "https://docs.rs/imprint"
repository = "https://github.com/Rufflewind/imprint"
license = "MIT/Apache-2.0"
exclude = [".gitignore", "README.md", "docs/*"]

[dependencies]
